--- a/src/app/features/portfolio/pages/project-detail/project-detail.component.scss
+++ b/src/app/features/portfolio/pages/project-detail/project-detail.component.scss
@@ -1,9 +1,11 @@
 @import "abstracts/variables";
+@import "abstracts/mixins";
 
 .project-detail {
   padding-top: 2rem;
+  padding-bottom: 5rem;
 
-  &__breadcrumbs {
+  &__breadcrumb {
     background-image: $primary-accent-color;
     color: transparent;
     background-clip: text;
@@ -11,19 +13,11 @@
     margin-bottom: 1rem;
   }
 
-  &__back-button {
-    background-image: inherit;
-    color: inherit;
-    background-clip: inherit;
-    font-family: inherit;
-  }
-
   &__slideshow-container {
     margin-bottom: 3rem;
   }
 
   &__text-information-container {
-    margin-bottom: 5rem;
     display: flex;
     flex-direction: column;
     gap: 4rem;
@@ -46,6 +40,63 @@
   &__paragraph {
     margin-bottom: 2rem;
   }
+
+  @include media-breakpoint-up("md") {
+    padding-bottom: 10rem;
+
+    &__text-information-container {
+      flex-direction: row;
+      gap: 1rem;
+    }
+
+    &__text-information-block {
+      align-items: flex-start;
+
+      &:first-child {
+        flex: 3.15;
+      }
+
+      &:last-child {
+        flex: 1;
+        min-width: 0;
+      }
+    }
+
+    &__title,
+    &__paragraph {
+      text-align: left;
+    }
+
+    &__title {
+      // line-height is decreased to 1 so that the title alligns with the other h2
+      // headings
+      line-height: 1;
+      margin-bottom: calc((3.75rem * 1.5 - 3.75rem) / 2);
+    }
+
+    &__paragraph {
+      // Creates more spacing to the right
+      padding-right: 2rem;
+    }
+  }
+  @include media-breakpoint-up("lg") {
+    &__text-information-container {
+      gap: 2rem;
+    }
+
+    &__text-information-block {
+      &:first-child {
+        flex: 3.25;
+      }
+    }
+  }
+  @include media-breakpoint-up("xl") {
+    &__text-information-block {
+      &:first-child {
+        flex: 3.2;
+      }
+    }
+  }
 }
 
 .additional-information-block {
@@ -56,5 +107,9 @@
 
   &__list {
     list-style-position: inside;
+  }
+
+  @include media-breakpoint-up("md") {
+    align-items: flex-start;
   }
 }
