--- a/src/app/features/portfolio/components/project-gallery/project-gallery.component.html
+++ b/src/app/features/portfolio/components/project-gallery/project-gallery.component.html
@@ -3,7 +3,7 @@
     <div *ngFor="let grid of grids" class="project-gallery__grid">
       <div
         *ngFor="let project of grid.projects"
-        class="project-gallery__grid-item"
+        class="project-gallery__grid-item fade-in"
       >
         <portfolio-project-gallery-item [project]="project">
         </portfolio-project-gallery-item>
