--- a/src/app/features/portfolio/components/services-section/services-section.component.html
+++ b/src/app/features/portfolio/components/services-section/services-section.component.html
@@ -5,7 +5,7 @@
     <div class="services__service-cards-container">
       <div
         *ngFor="let service of services"
-        class="services__service-card-container"
+        class="services__service-card-container fade-in"
       >
         <portfolio-service-card [service]="service"></portfolio-service-card>
       </div>
