--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -9,7 +9,7 @@
       [ngClass]="'header__top-row-container--' + backgroundColor"
     >
       <div class="container container--mobile header__top-row">
-        <a href="/">
+        <a routerLink="/" [fragment]="SectionId.HOME">
           <svg
             width="39"
             height="39"
