--- a/src/app/features/portfolio/components/about-section/about-section.component.html
+++ b/src/app/features/portfolio/components/about-section/about-section.component.html
@@ -5,7 +5,7 @@
       subtitle="Über mich"
     ></portfolio-section-header>
     <div class="about__content-container">
-      <div class="about__image-container">
+      <div class="about__image-container fade-in">
         <div class="padding-top-hack padding-top-hack--1-by-1">
           <div class="padding-top-hack__inner-container">
             <img
@@ -16,7 +16,7 @@
           </div>
         </div>
       </div>
-      <p class="section__paragraph">
+      <p class="section__paragraph fade-in">
         Labore id qui cupidatat laborum mollit. Velit eiusmod ullamco laborum
         commodo sunt laboris sunt consectetur aliqua laborum consectetur quis
         magna ea. Id exercitation fugiat sunt adipisicing. Veniam et nisi cillum
