--- a/src/app/features/portfolio/components/hero-section/hero-section.component.html
+++ b/src/app/features/portfolio/components/hero-section/hero-section.component.html
@@ -23,12 +23,14 @@
       </div>
       <div class="hero__contact-button-container">
         <div class="hero__contact-button-inner-container">
-          <button
+          <a
             class="button hero__contact-button"
             [ngClass]="{
               'hero__contact-button--fixed':
                 isContactButtonIntersecting === false
             }"
+            routerLink="/"
+            [fragment]="SectionId.CONTACT"
           >
             <svg
               width="24"
@@ -52,7 +54,7 @@
             >
               Kontakt
             </p>
-          </button>
+          </a>
         </div>
       </div>
     </div>
