--- a/src/app/features/portfolio/components/hero-section/hero-section.component.scss
+++ b/src/app/features/portfolio/components/hero-section/hero-section.component.scss
@@ -65,6 +65,7 @@
     left: 0;
     width: 100%;
     height: 100vh;
+    pointer-events: none;
   }
 
   &__contact-button {
@@ -72,6 +73,7 @@
     // that these properties are animatable
     padding: initial;
     justify-content: center;
+    pointer-events: all;
 
     position: absolute;
     // 64px header height
@@ -81,7 +83,7 @@
     z-index: 2;
     width: 8rem;
     height: 3rem;
-    @include with-transition(all);
+    @include with-transition(all, 0.5s);
 
     &--fixed {
       position: fixed;
