--- a/src/app/features/portfolio/components/project-gallery-item/project-gallery-item.component.scss
+++ b/src/app/features/portfolio/components/project-gallery-item/project-gallery-item.component.scss
@@ -7,10 +7,21 @@
   border-radius: $default-border-radius;
   overflow: hidden;
   position: relative;
-  display: block;
 
   &:hover &__overlay {
     opacity: 1;
+  }
+
+  &__link {
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    // Disabled pointer events. Routing functionality has to be conditionally handled
+    // by the parent component of this component.
+    pointer-events: none;
   }
 
   &__overlay {
@@ -25,6 +36,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+    pointer-events: none;
     @include with-transition(opacity);
   }
 
@@ -47,6 +59,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    pointer-events: none;
   }
 
   @include media-breakpoint-up("md") {
