--- a/src/app/features/portfolio/pages/project-detail/project-detail.component.html
+++ b/src/app/features/portfolio/pages/project-detail/project-detail.component.html
@@ -31,6 +31,7 @@
           [href]="project.websiteUrl"
         >
           <svg
+            class="button__icon"
             width="24"
             height="25"
             viewBox="0 0 24 25"
