--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -2,20 +2,43 @@
 
 .button {
   padding: 0.75rem 1rem;
-  background-image: $primary-accent-color;
   border-radius: $default-border-radius;
   display: flex;
   gap: 0.5rem;
   align-items: center;
+  position: relative;
+  overflow: hidden;
 
-  &:disabled {
+  &:hover:not(:disabled) {
+    cursor: pointer;
+
+    &::before {
+      filter: $primary-accent-color-hover-filter;
+    }
+  }
+
+  &:disabled::before {
     filter: $primary-accent-color-disabled-filter;
+  }
+
+  // Pseudo element has to be created because filter (on e.g. hover) gets applied to all
+  // child elements which would also include the icon and the label.
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: $primary-accent-color;
+    @include with-transition(filter);
   }
 
   &__icon {
     width: 24px;
     height: 24px;
     fill: $primary-font-color-light;
+    position: relative;
   }
 
   &__label {
@@ -24,5 +47,6 @@
     font-size: 1rem;
     letter-spacing: 0.1em;
     line-height: 1.5;
+    position: relative;
   }
 }
