Included news section

--- a/src/app/features/portfolio/pages/home/home.component.html
+++ b/src/app/features/portfolio/pages/home/home.component.html
@@ -27,6 +27,10 @@
   [id]="SectionId.TESTIMONIALS"
   class="anchor-element"
 ></portfolio-testimonials-section>
+<portfolio-news-section
+  [id]="SectionId.NEWS"
+  class="anchor-element"
+></portfolio-news-section>
 <portfolio-contact-section
   [id]="SectionId.CONTACT"
   class="anchor-element"
