--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -3,8 +3,8 @@ $primary-font-color-light: #ffffff;
 $primary-font-color-dark: #303030;
 $secondary-font-color-light: #e2e2e2;
 $secondary-font-color-dark: #5c5c5c;
-$primary-accent-color-start: hsl(241, 70, 60);
-$primary-accent-color-stop: hsl(292, 70, 60);
+$primary-accent-color-start: #5452e0;
+$primary-accent-color-stop: #cd52e0;
 $primary-accent-color: linear-gradient(
   90deg,
   $primary-accent-color-start,
