--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -45,7 +45,7 @@
     </div>
     <p class="footer__contact-information">
       +49 12345678 <br />
-      kontak@tomke-nils.de
+      kontakt@tomke-nils.de
     </p>
   </div>
   <p class="footer__author-note">
