--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,6 +7,7 @@
 @import "base/typography";
 
 @import "components/button";
+@import "components/instafeed";
 
 @import "layout/aspect-ratio";
 @import "layout/grid";
