Created login card

--- a/src/app/features/portfolio/components/news-section/news-section.component.html
+++ b/src/app/features/portfolio/components/news-section/news-section.component.html
@@ -1,4 +1,4 @@
-<section class="section about">
+<section class="section news">
   <div class="container">
     <portfolio-section-header
       title="Meine letzten Posts"
