--- a/src/app/features/portfolio/components/service-card/service-card.component.html
+++ b/src/app/features/portfolio/components/service-card/service-card.component.html
@@ -1,4 +1,4 @@
-<div class="service-card">
+<div class="card service-card">
   <img [src]="service?.iconUrl" alt="" class="service-card__icon" />
   <div class="service-card__text-container">
     <h3 class="service-card__title">
