--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -17,9 +17,10 @@ $primary-background-color-light: #ffffff;
 $secondary-background-color-light: #f6f6f6;
 $primary-background-color-dark: #2a2a2a;
 $secondary-background-color-dark: #3a3a3a;
-$overlay-color: hsla(0, 0, 0, 0.7);
+$overlay-color: #000000b3;
 $muted-color: #c4c4c4;
-$error-color: hsl(0, 77%, 58%);
+$error-color: #e64141;
+$form-control-background-color: #ececec;
 
 // Bootstrap breakpoints
 $grid-breakpoints: (
