--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,9 +7,11 @@
 @import "base/typography";
 
 @import "components/button";
+@import "components/card";
 @import "components/instafeed";
 
 @import "layout/aspect-ratio";
+@import "layout/form";
 @import "layout/grid";
 @import "layout/section";
 
