--- a/src/app/features/portfolio/pages/project-detail/project-detail.component.html
+++ b/src/app/features/portfolio/pages/project-detail/project-detail.component.html
@@ -1,4 +1,4 @@
-<section *ngIf="project" class="project-detail">
+<main *ngIf="project" class="project-detail">
   <div class="container">
     <div>
       <button
@@ -77,5 +77,5 @@
       </div>
     </div>
   </div>
-</section>
+</main>
 <shared-footer></shared-footer>
