--- a/src/app/features/admin-dashboard/pages/home/home.component.html
+++ b/src/app/features/admin-dashboard/pages/home/home.component.html
@@ -1,1 +1,4 @@
-<button (click)="onClickLogOutButton()">log out</button>
+<admin-dashboard-header> </admin-dashboard-header>
+<main>
+  <admin-dashboard-projects-section></admin-dashboard-projects-section>
+</main>
