--- a/src/app/features/portfolio/components/news-section/news-section.component.html
+++ b/src/app/features/portfolio/components/news-section/news-section.component.html
@@ -1,9 +1,9 @@
 <section class="section news">
   <div class="container">
-    <portfolio-section-header
+    <shared-section-header
       title="Meine letzten Posts"
       subtitle="News"
-    ></portfolio-section-header>
+    ></shared-section-header>
     <div class="instafeed"></div>
   </div>
 </section>
