--- a/src/app/features/portfolio/components/projects-section/projects-section.component.html
+++ b/src/app/features/portfolio/components/projects-section/projects-section.component.html
@@ -1,9 +1,9 @@
 <section class="section">
   <div class="container">
-    <portfolio-section-header
+    <shared-section-header
       title="Meine letzten Projekte"
       subtitle="Projekte"
-    ></portfolio-section-header>
+    ></shared-section-header>
   </div>
   <portfolio-project-gallery [projects]="projects"></portfolio-project-gallery>
 </section>
