--- a/src/app/features/portfolio/components/testimonials-section/testimonials-section.component.html
+++ b/src/app/features/portfolio/components/testimonials-section/testimonials-section.component.html
@@ -1,10 +1,10 @@
 <section class="section testimonials-section">
   <div class="container">
-    <portfolio-section-header
+    <shared-section-header
       title="Was andere über mich sagen"
       subtitle="Empfehlungen"
     >
-    </portfolio-section-header>
+    </shared-section-header>
   </div>
   <div #slideshowContainer class="swiper fade-in">
     <div class="swiper-wrapper testimonials-section__testimonials-container">
