--- a/src/app/features/portfolio/components/about-section/about-section.component.html
+++ b/src/app/features/portfolio/components/about-section/about-section.component.html
@@ -1,9 +1,9 @@
 <section class="section about">
   <div class="container">
-    <portfolio-section-header
+    <shared-section-header
       title="Was mich ausmacht"
       subtitle="Über mich"
-    ></portfolio-section-header>
+    ></shared-section-header>
     <div class="about__content-container">
       <div class="about__image-container fade-in">
         <div class="padding-top-hack padding-top-hack--1-by-1">
