--- a/src/app/features/portfolio/components/contact-section/contact-section.component.html
+++ b/src/app/features/portfolio/components/contact-section/contact-section.component.html
@@ -1,9 +1,9 @@
 <section class="section contact">
   <div class="container">
-    <portfolio-section-header
+    <shared-section-header
       title="Schreibe mir direkt eine Nachricht"
       subtitle="Kontakt"
-    ></portfolio-section-header>
+    ></shared-section-header>
     <form
       ngForm
       #contactForm="ngForm"
