--- a/src/app/features/portfolio/components/hero-section/hero-section.component.scss
+++ b/src/app/features/portfolio/components/hero-section/hero-section.component.scss
@@ -61,7 +61,7 @@
 
   &__contact-button-inner-container {
     position: absolute;
-    top: -64px;
+    top: -$default-header-height;
     left: 0;
     width: 100%;
     height: 100vh;
@@ -76,8 +76,7 @@
     pointer-events: all;
 
     position: absolute;
-    // 64px header height
-    bottom: calc(100% - 3rem - 64px);
+    bottom: calc(100% - 3rem - $default-header-height);
     right: calc(50% - 8rem / 2);
     // Has to be 2 because of swiper slides
     z-index: 2;
