--- a/src/app/features/portfolio/components/services-section/services-section.component.html
+++ b/src/app/features/portfolio/components/services-section/services-section.component.html
@@ -1,7 +1,7 @@
 <section class="section services">
   <div class="container">
-    <portfolio-section-header title="Was ich mache" subtitle="Leistungen">
-    </portfolio-section-header>
+    <shared-section-header title="Was ich mache" subtitle="Leistungen">
+    </shared-section-header>
     <div class="services__service-cards-container">
       <div
         *ngFor="let service of services"
