--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -25,7 +25,7 @@
   }
 
   &__top-row-container {
-    height: 63px;
+    height: calc($default-header-height - 1px);
     @include with-transition(background-color);
 
     &--white {
@@ -118,7 +118,7 @@
   }
 
   @include media-breakpoint-up("md") {
-    height: 64px;
+    height: $default-header-height;
 
     &--white {
       background-color: $primary-background-color-light;
