Adjustements to buttons

--- a/src/app/features/admin-dashboard/components/header/header.component.html
+++ b/src/app/features/admin-dashboard/components/header/header.component.html
@@ -70,9 +70,12 @@
         </linearGradient>
       </defs>
     </svg>
-    <button class="button" (click)="onClickLogOutButton()">
+    <button
+      class="button button--primary-accent-inverted"
+      (click)="onClickLogOutButton()"
+    >
       <svg
-        class="button__icon"
+        class="button__icon button__icon--primary-accent"
         width="24"
         height="20"
         viewBox="0 0 24 20"
@@ -97,7 +100,7 @@
           </linearGradient>
         </defs>
       </svg>
-      <p class="button__label">Ausloggen</p>
+      <p class="button__label button__label--primary-accent">Ausloggen</p>
     </button>
   </div>
 </header>
