--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -40,7 +40,7 @@
         instagramUrl="/"
         linkedInUrl="/"
         tikTokUrl="/"
-        [iconsColor]="SocialMediaIconsColor.WHITE"
+        [iconsColor]="SocialMediaIconsColor.LIGHT"
       ></shared-social-media-channels>
     </div>
     <p class="footer__contact-information">
