--- a/src/app/features/portfolio/pages/project-detail/project-detail.component.html
+++ b/src/app/features/portfolio/pages/project-detail/project-detail.component.html
@@ -27,11 +27,11 @@
         </p>
         <a
           *ngIf="project.websiteUrl"
-          class="button"
+          class="button button--primary-accent"
           [href]="project.websiteUrl"
         >
           <svg
-            class="button__icon"
+            class="button__icon button__icon--light"
             width="24"
             height="25"
             viewBox="0 0 24 25"
@@ -55,7 +55,7 @@
               </clipPath>
             </defs>
           </svg>
-          <p class="button__label">Zur Website</p>
+          <p class="button__label button__label--light">Zur Website</p>
         </a>
       </div>
       <div class="project-detail__text-information-block">
@@ -65,7 +65,7 @@
             [instagramUrl]="project.instagramUrl"
             [linkedInUrl]="project.linkedInUrl"
             [tikTokUrl]="project.tikTokUrl"
-            [iconsColor]="SocialMediaIconsColor.ACCENT"
+            [iconsColor]="SocialMediaIconsColor.PRIMARY_ACCENT"
           ></shared-social-media-channels>
         </div>
         <div class="additional-information-block">
