--- a/src/app/shared/components/section-header/section-header.component.scss
+++ b/src/app/shared/components/section-header/section-header.component.scss
@@ -2,6 +2,9 @@
 
 .section-header {
   margin-bottom: 2.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
   &__title {
     text-align: center;
