--- a/src/app/shared/components/social-media-channels/social-media-channels.component.html
+++ b/src/app/shared/components/social-media-channels/social-media-channels.component.html
@@ -6,7 +6,7 @@
     class="social-media-channels__link"
   >
     <svg
-      *ngIf="iconsColor === SocialMediaIconsColor.WHITE"
+      *ngIf="iconsColor === SocialMediaIconsColor.LIGHT"
       width="40"
       height="40"
       viewBox="0 0 40 40"
@@ -20,7 +20,7 @@
       />
     </svg>
     <svg
-      *ngIf="iconsColor === SocialMediaIconsColor.ACCENT"
+      *ngIf="iconsColor === SocialMediaIconsColor.PRIMARY_ACCENT"
       width="40"
       height="40"
       viewBox="0 0 40 40"
@@ -65,7 +65,7 @@
     class="social-media-channels__link"
   >
     <svg
-      *ngIf="iconsColor === SocialMediaIconsColor.WHITE"
+      *ngIf="iconsColor === SocialMediaIconsColor.LIGHT"
       width="40"
       height="40"
       viewBox="0 0 40 40"
@@ -91,7 +91,7 @@
       </defs>
     </svg>
     <svg
-      *ngIf="iconsColor === SocialMediaIconsColor.ACCENT"
+      *ngIf="iconsColor === SocialMediaIconsColor.PRIMARY_ACCENT"
       width="40"
       height="40"
       viewBox="0 0 40 40"
@@ -146,7 +146,7 @@
     class="social-media-channels__link"
   >
     <svg
-      *ngIf="iconsColor === SocialMediaIconsColor.WHITE"
+      *ngIf="iconsColor === SocialMediaIconsColor.LIGHT"
       width="40"
       height="40"
       viewBox="0 0 40 40"
@@ -188,7 +188,7 @@
       </defs>
     </svg>
     <svg
-      *ngIf="iconsColor === SocialMediaIconsColor.ACCENT"
+      *ngIf="iconsColor === SocialMediaIconsColor.PRIMARY_ACCENT"
       width="40"
       height="40"
       viewBox="0 0 40 40"
