--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -62,6 +62,7 @@ $default-button-hitbox: 0.5rem;
 $default-box-shadow-spread: 4px;
 $default-box-shadow: 0 4px $default-box-shadow-spread 0 hsla(0, 0, 0, 0.25);
 $default-header-height: 64px;
+$default-vertical-section-padding: 5rem;
 
 // Transitions
 $default-transition-duration: 0.25s;
