--- a/src/styles/layout/_section.scss
+++ b/src/styles/layout/_section.scss
@@ -1,5 +1,7 @@
+@import "abstracts/variables";
+
 .section {
-  padding: 5rem 0;
+  padding: $default-vertical-section-padding 0;
 
   &__paragraph {
     text-align: center;
