--- a/src/app/features/admin-dashboard/components/project-grid/project-grid.component.html
+++ b/src/app/features/admin-dashboard/components/project-grid/project-grid.component.html
@@ -2,11 +2,13 @@
   <div *ngFor="let project of projects">
     <admin-dashboard-project-card
       [project]="project"
+      (clickEditButton)="clickProjectCardEditButton.emit(project)"
+      (clickDeleteButton)="clickProjectCardDeleteButton.emit(project)"
     ></admin-dashboard-project-card>
   </div>
-  <div class="project-grid-item">
+  <div>
     <admin-dashboard-add-project-card
-      (clickAddProjectButton)="onClickAddProjectButton()"
+      (clickAddProjectCard)="clickAddProjectCard.emit()"
     ></admin-dashboard-add-project-card>
   </div>
 </div>
