--- a/src/app/features/admin-dashboard/components/projects-section/projects-section.component.html
+++ b/src/app/features/admin-dashboard/components/projects-section/projects-section.component.html
@@ -4,6 +4,12 @@
       title="Projekt-Übersicht"
       subtitle="Projekte"
     ></shared-section-header>
-    <admin-dashboard-project-grid> </admin-dashboard-project-grid>
+    <admin-dashboard-project-grid
+      [projects]="projects"
+      (clickProjectCardEditButton)="clickProjectCardEditButton.emit($event)"
+      (clickProjectCardDeleteButton)="clickProjectCardDeleteButton.emit($event)"
+      (clickAddProjectCard)="clickAddProjectCard.emit()"
+    >
+    </admin-dashboard-project-grid>
   </div>
 </section>
