--- a/src/app/features/admin-dashboard/components/project-modal/project-modal.component.scss
+++ b/src/app/features/admin-dashboard/components/project-modal/project-modal.component.scss
@@ -6,10 +6,11 @@
   left: 0;
   z-index: 3;
   width: 100%;
-  min-height: 100vh;
+  height: 100%;
   background-color: $overlay-color;
   padding: $default-vertical-section-padding 0;
   backdrop-filter: blur(2px);
+  overflow: auto;
 }
 
 .container {
@@ -20,4 +21,38 @@
   position: absolute;
   top: 300px;
   left: 0;
+}
+
+.project-modal {
+  &__multi-select-container {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+
+  &__service-chips-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.375rem;
+  }
+
+  &__image-container {
+    width: calc(2 / 3 * 100%);
+    max-width: 400px;
+  }
+
+  &__slideshow-images-container {
+    display: flex;
+    gap: 0.5rem;
+    overflow: auto;
+
+    & > * {
+      flex: none;
+    }
+  }
+}
+
+.form__footer {
+  justify-content: flex-start;
+  flex-wrap: wrap;
 }
