--- a/src/app/features/admin-dashboard/components/service-chip/service-chip.component.html
+++ b/src/app/features/admin-dashboard/components/service-chip/service-chip.component.html
@@ -3,14 +3,22 @@
     {{ service }}
   </p>
   <svg
-    xmlns="http://www.w3.org/2000/svg"
+    class="service-chip__icon"
     width="24"
     height="24"
     viewBox="0 0 24 24"
-    class="service-chip__icon"
+    fill="none"
+    xmlns="http://www.w3.org/2000/svg"
   >
-    <path
-      d="M12 0c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm4.151 17.943l-4.143-4.102-4.117 4.159-1.833-1.833 4.104-4.157-4.162-4.119 1.833-1.833 4.155 4.102 4.106-4.16 1.849 1.849-4.1 4.141 4.157 4.104-1.849 1.849z"
-    />
+    <g clip-path="url(#clip0_131_631)">
+      <path
+        d="M23.954 21.03L14.77 11.935L23.862 2.761L21.03 -0.0459976L11.94 9.133L2.76398 0.0450024L-0.0460205 2.855L9.13998 11.96L0.0449795 21.144L2.85498 23.954L11.967 14.762L21.147 23.862L23.954 21.03Z"
+      />
+    </g>
+    <defs>
+      <clipPath id="clip0_131_631">
+        <rect width="24" height="24" fill="white" />
+      </clipPath>
+    </defs>
   </svg>
 </button>
