--- a/src/app/features/admin-dashboard/pages/home/home.component.html
+++ b/src/app/features/admin-dashboard/pages/home/home.component.html
@@ -2,6 +2,15 @@
 <main>
   <admin-dashboard-project-modal
     *ngIf="shouldShowModal"
+    [project]="selectedProject"
+    (clickCancelButton)="onClickCancelButton()"
+    (clickAddButton)="onClickAddButton($event)"
+    (clickSaveButton)="onClickSaveButton($event)"
   ></admin-dashboard-project-modal>
-  <admin-dashboard-projects-section></admin-dashboard-projects-section>
+  <admin-dashboard-projects-section
+    [projects]="projects"
+    (clickProjectCardEditButton)="onClickProjectCardEditButton($event)"
+    (clickProjectCardDeleteButton)="onClickProjectCardDeleteButton($event)"
+    (clickAddProjectCard)="onClickAddProjectCard()"
+  ></admin-dashboard-projects-section>
 </main>
