Made admin-dashboard responsive

--- a/src/app/features/admin-dashboard/components/project-card/project-card.component.html
+++ b/src/app/features/admin-dashboard/components/project-card/project-card.component.html
@@ -5,7 +5,7 @@
         <div class="project-card__more-button-container">
           <button
             class="project-card__more-button"
-            (click)="onClickMoreButton()"
+            (click)="clickMoreButton.emit($event)"
           >
             <svg
               class="project-card__more-icon"
