--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -20,6 +20,7 @@ $secondary-background-color-dark: #3a3a3a;
 $overlay-color: #000000b3;
 $muted-color: #c4c4c4;
 $form-control-background-color: #ececec;
+$form-control-placeholder-color: #757575;
 $success-color: hsl(120, 50%, 60%);
 $info-color: hsl(240, 50%, 60%);
 $warn-color: hsl(60, 50%, 60%);
