--- a/src/app/features/admin-dashboard/components/project-modal/project-modal.component.html
+++ b/src/app/features/admin-dashboard/components/project-modal/project-modal.component.html
@@ -71,6 +71,7 @@
               ></admin-dashboard-project-modal-image>
               <admin-dashboard-project-modal-file-input
                 *ngIf="!project.thumbnailImageUrl"
+                placeholderLabel="Thumbnail hochladen"
                 (changeImageFileInput)="onChangeThumbnailImageFileInput($event)"
               >
               </admin-dashboard-project-modal-file-input>
@@ -83,6 +84,10 @@
               <select
                 #servicesSelect
                 class="form__control"
+                [ngClass]="{
+                  'project-modal__multi-select-default-option':
+                    servicesSelect.value === ''
+                }"
                 (change)="onChangeServicesSelect(servicesSelect.value)"
               >
                 <option value="" selected disabled hidden>Auswählen</option>
@@ -147,6 +152,7 @@
               </div>
               <div class="project-modal__image-container">
                 <admin-dashboard-project-modal-file-input
+                  placeholderLabel="Slideshow-Bilder hochladen"
                   [multipleImages]="true"
                   (changeImageFileInput)="
                     onChangeSlideshowImagesFileInput($event)
