--- a/src/app/features/admin-dashboard/components/project-modal/project-modal.component.scss
+++ b/src/app/features/admin-dashboard/components/project-modal/project-modal.component.scss
@@ -36,6 +36,10 @@
     gap: 0.5rem;
   }
 
+  &__multi-select-default-option {
+    color: $form-control-placeholder-color;
+  }
+
   &__service-chips-container {
     display: flex;
     flex-wrap: wrap;
