--- a/src/styles/layout/_form.scss
+++ b/src/styles/layout/_form.scss
@@ -27,6 +27,10 @@
     border-radius: $default-border-radius;
     font-size: 1rem;
     line-height: 1.175;
+
+    &::placeholder {
+      color: $form-control-placeholder-color;
+    }
   }
 
   &__alerts-container {
