Small change to buttons

--- a/src/app/features/admin-dashboard/components/project-card-context-menu/project-card-context-menu.component.scss
+++ b/src/app/features/admin-dashboard/components/project-card-context-menu/project-card-context-menu.component.scss
@@ -13,4 +13,13 @@
 
 .button {
   width: 100%;
+
+  &__icon {
+    width: 16px;
+    height: 16px;
+  }
+
+  &__label {
+    font-family: $secondary-font-regular;
+  }
 }
