--- a/src/app/features/portfolio/components/project-detail-slideshow/project-detail-slideshow.component.scss
+++ b/src/app/features/portfolio/components/project-detail-slideshow/project-detail-slideshow.component.scss
@@ -25,7 +25,7 @@
     z-index: 1;
 
     &:disabled {
-      filter: $primary-accent-color-disabled-filter;
+      filter: $button-disabled-filter;
     }
 
     &--left {
