--- a/src/app/features/portfolio/components/testimonials-section/testimonials-section.component.scss
+++ b/src/app/features/portfolio/components/testimonials-section/testimonials-section.component.scss
@@ -56,7 +56,7 @@
     z-index: 1;
 
     &:disabled {
-      filter: $primary-accent-color-disabled-filter;
+      filter: $button-disabled-filter;
     }
 
     &--left {
