Crud now fully functional

--- a/src/app/features/admin-dashboard/components/project-modal/project-modal.component.html
+++ b/src/app/features/admin-dashboard/components/project-modal/project-modal.component.html
@@ -1,10 +1,7 @@
-<div class="overlay" (click)="clickCancelButton.emit()">
-  <div class="container">
-    <div class="card project-modal" (click)="onClickProjectModal($event)">
-      <button
-        class="project-modal__close-button"
-        (click)="clickCancelButton.emit()"
-      >
+<div class="modal__overlay" (click)="clickCancelButton.emit()">
+  <div class="modal__container">
+    <div class="modal project-modal" (click)="onClickProjectModal($event)">
+      <button class="modal__close-button" (click)="clickCancelButton.emit()">
         <svg
           width="24"
           height="24"
