--- a/src/app/features/admin-dashboard/components/project-modal/project-modal.component.scss
+++ b/src/app/features/admin-dashboard/components/project-modal/project-modal.component.scss
@@ -2,34 +2,7 @@
 @import "abstracts/variables";
 @import "abstracts/mixins";
 
-.overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 3;
-  width: 100%;
-  height: 100%;
-  background-color: $overlay-color;
-  padding: $default-vertical-section-padding 0;
-  backdrop-filter: blur(2px);
-  overflow: auto;
-}
-
 .project-modal {
-  width: 100%;
-  max-width: map.get($container-widths, "xl");
-  margin: 0 auto;
-  position: relative;
-
-  &__close-button {
-    position: absolute;
-    top: 2rem;
-    right: 0.75rem;
-    padding: $default-button-hitbox;
-    margin-top: -$default-button-hitbox;
-    margin-right: -$default-button-hitbox;
-  }
-
   &__multi-select-container {
     display: flex;
     flex-direction: column;
@@ -60,12 +33,6 @@
       flex: none;
     }
   }
-
-  @include media-breakpoint-up("md") {
-    &__close-button {
-      right: 2rem;
-    }
-  }
 }
 
 .form {
@@ -81,7 +48,7 @@
   }
 
   &__footer {
-    justify-content: flex-start;
+    justify-content: flex-end;
     flex-wrap: wrap;
   }
 }
