--- a/src/app/features/admin-dashboard/components/projects-section/projects-section.component.html
+++ b/src/app/features/admin-dashboard/components/projects-section/projects-section.component.html
@@ -5,6 +5,7 @@
       subtitle="Projekte"
     ></shared-section-header>
     <admin-dashboard-project-grid
+      *ngIf="projects"
       [projects]="projects"
       (clickProjectCardEditButton)="clickProjectCardEditButton.emit($event)"
       (clickProjectCardDeleteButton)="clickProjectCardDeleteButton.emit($event)"
