--- a/src/app/features/admin-dashboard/pages/login/login.component.scss
+++ b/src/app/features/admin-dashboard/pages/login/login.component.scss
@@ -29,9 +29,10 @@
 .card {
   position: absolute;
   top: 50%;
-  left: 0;
+  left: 50%;
   width: 100%;
-  transform: translate(0, -50%);
+  max-width: 500px;
+  transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
   align-items: center;
