--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,7 @@
 
 @import "components/button";
 @import "components/card";
+@import "components/modal";
 @import "components/instafeed";
 
 @import "layout/aspect-ratio";
