Api key can now be controlled from the admin dashboard

--- a/src/app/features/admin-dashboard/components/projects-section/projects-section.component.html
+++ b/src/app/features/admin-dashboard/components/projects-section/projects-section.component.html
@@ -1,4 +1,4 @@
-<section class="section projects">
+<section class="section">
   <div class="container">
     <shared-section-header
       title="Projekt-Übersicht"
