--- a/src/app/features/admin-dashboard/pages/home/home.component.html
+++ b/src/app/features/admin-dashboard/pages/home/home.component.html
@@ -19,4 +19,8 @@
     (clickProjectCardDeleteButton)="onClickProjectCardDeleteButton($event)"
     (clickAddProjectCard)="onClickAddProjectCard()"
   ></admin-dashboard-projects-section>
+  <admin-dashboard-instagram-api-key-section
+    [instagramApiKey]="instagramApiKey"
+    (clickSubmitButton)="onClickInstagramApiKeySectionSubmitButton($event)"
+  ></admin-dashboard-instagram-api-key-section>
 </main>
