--- a/src/app/features/admin-dashboard/components/projects-section/projects-section.component.scss
+++ b/src/app/features/admin-dashboard/components/projects-section/projects-section.component.scss
@@ -1,5 +1,6 @@
 @import "abstracts/variables";
 
-.projects {
+.section {
   background-color: $secondary-background-color-light;
+  margin-top: $default-header-height;
 }
